kubernetes/apps/actions-runner/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: actions-controller
---
apiVersion: v1
kind: Namespace
metadata:
  name: actions-runners
  labels:
    pod-security.kubernetes.io/enforce: privileged
---
apiVersion: v1
kind: Namespace
metadata:
  name: actions-cache
