kubernetes/apps/actions-runner/netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-in-cluster
  namespace: actions-runners
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: actions-cache
        podSelector:
          matchLabels:
            app.kubernetes.io/name: registry
      ports:
        - port: 5000
          protocol: TCP
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: actions-cache
        podSelector:
          matchLabels:
            app.kubernetes.io/name: actions-cache
      ports:
        - port: 3000
          protocol: TCP
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: actions-cache
        podSelector:
          matchLabels:
            app.kubernetes.io/name: hf-cache
      ports:
        - port: 8090
          protocol: TCP
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: storage
        podSelector:
          matchLabels:
            app: rook-ceph-rgw
      ports:
        - port: 8080
          protocol: TCP
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
